2008-04-13  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/engines/surfaceengine.*,
	libavogadro/src/engines/surfacesettingswidget.ui: Clipping now works
	for any specified plane.

2008-04-12  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/engines/surfaceengine.*,
	libavogadro/src/engines/surfacesettingswidget.ui: Added clipping
	plane. This feature could later be moved to glwidget to clip any
	engine... This would probably require engines to have a clipped and
	solid property (like they currently have radius)

2008-04-09  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glpainter.cpp, libavogadro/src/glwidget.cpp: Parts
	of the patch from Benoit Jacob - fix handling of quality change.

	* libavogadro/src/glwidget.cpp: Fixed bug where display lists were
	not being invalidated when the display quality was adjusted.

	* libavogadro/src/engines/forceengine.cpp,
	libavogadro/src/engines/orbitalengine.cpp,
	libavogadro/src/engines/surfaceengine.cpp: Fixed some compiler
	warnings.

2008-04-09  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/camera.h, libavogadro/src/textrenderer.h,
	libavogadro/src/tools/drawtool.cpp: Fixed a few compiler warnings.

2008-04-08  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/CMakeLists.txt: Remove duplicate call to automoc.

2008-04-07  Marcus D. Hanwell  <marcus@cryos.org>

	* CMakeLists.txt: Only set the linker flags on Linux systems.

	* libavogadro/src/CMakeLists.txt: Disabled the visibility flags for
	now as they seem to break forcefield support.

	* avogadro/src/mainwindow.cpp: Added a warning dialog when no engines
	and/or tools were loaded.

	* libavogadro/src/CMakeLists.txt,
	libavogadro/src/engines/CMakeLists.txt, libavogadro/src/glwidget.cpp:
	Statically linked the ball and stick engine to libavogadro. This
	guarantees the minimal ability to display a molecule.

2008-04-06  Marcus D. Hanwell  <marcus@cryos.org>
